--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,13 @@ __pycache__/
 build/
 develop-eggs/
 dist/
+bin/
 downloads/
 eggs/
 .eggs/
 lib/
 lib64/
+lib64
 parts/
 sdist/
 var/
@@ -109,6 +111,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+pyvenv.cfg
 
 # Spyder project settings
 .spyderproject
